# noise

./: .ackrc  .gitignore  LICENSE  Language.hs  README.md  Token.hs  main.hs  noise.cabal  nouns.cabal
Language/Nouns/: Core.hs  Language.hs  Token.hs
Text/Nouns/: Compiler.hs  Core.hs  Language.hs  Parser.hs  Renderer.hs  Token.hs
Text/Nouns/Compiler/: Document.hs
Text/Nouns/Parser/: AST.hs  Token.hs
src/: Main.hs
src-cli/: Main.hs
src/Text/: Nouns.hs
src/Text/Noise/: Compiler.hs  Error.hs  Parser.hs  Renderer.hs  SourceRange.hs
src/Text/Noise/Compiler/: Builtin.hs  Document.hs  Error.hs  Function.hs
src/Text/Noise/Compiler/Document/: Color.hs
src/Text/Noise/Parser/: AST.hs  Character.hs  Language.hs  Token.hs
src/Text/Noise/Parser/Token/: Internal.hs
src/Text/Noise/Renderer/SVG/: Attributes.hs
src/Text/Nouns/: Compiler.hs  Error.hs  Parser.hs  Renderer.hs  SourceRange.hs
src/Text/Nouns/Compiler/: Builtin.hs  Document.hs  Error.hs  Function.hs
src/Text/Nouns/Compiler/Document/: Color.hs
src/Text/Nouns/IDE/: Completion.hs  Syntax.hs
src/Text/Nouns/Parser/: AST.hs  Character.hs  Language.hs  Token.hs
src/Text/Nouns/Parser/Token/: Internal.hs
src/Text/Nouns/Renderer/SVG/: Attributes.hs
tests/: Assertion.hs  Integration.hs  Main.hs
tests/Text/Noise/Compiler/: Test.hs
tests/Text/Noise/Compiler/Builtin/: Test.hs
tests/Text/Noise/Compiler/Document/Color/: Test.hs
tests/Text/Noise/Parser/: Test.hs
tests/Text/Noise/Parser/Character/: Test.hs
tests/Text/Nouns/Compiler/: Test.hs
tests/Text/Nouns/Compiler/Builtin/: Test.hs
tests/Text/Nouns/Compiler/Document/Color/: Test.hs
tests/Text/Nouns/IDE/Completion/: Test.hs
tests/Text/Nouns/IDE/Syntax/: Test.hs
tests/Text/Nouns/Parser/: Test.hs
tests/Text/Nouns/Parser/Character/: Test.hs
tests/Text/Nouns/Renderer/: Test.hs
