name:                nouns
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Tom Brow
maintainer:          tebrow@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable nouns
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base ==4.5.*,
    parsec ==3.1.*,
    blaze-svg ==0.3.*,
    blaze-markup ==0.5.*

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    base ==4.5.*,
    HTF ==0.10.*
