name:                nouns
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Tom Brow
maintainer:          tebrow@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable nouns
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base ==4.5.*,
    parsec ==3.1.*,
    blaze-svg ==0.3.*,
    blaze-markup ==0.5.*,
    cryptohash ==0.8.*,
    bytestring ==0.9.*,
    network ==2.3.*,
    containers ==0.4.*

test-suite test
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  hs-source-dirs: tests src
  main-is: Main.hs
  build-depends:
    base ==4.5.*,
    parsec ==3.1.*,
    blaze-svg ==0.3.*,
    blaze-markup ==0.5.*,
    cryptohash ==0.8.*,
    bytestring ==0.9.*,
    network ==2.3.*,
    containers ==0.4.*,
    HTF ==0.10.*,
    HUnit ==1.2.*,
    QuickCheck ==2.5.*,
    string-qq ==0.0.*,
    hxt ==9.3.0.1,
    hxt-xpath ==9.1.*
